--- a/client/package.json
+++ b/client/package.json
@@ -24,8 +24,10 @@
     "react-material-ui-carousel": "^1.8.3",
     "react-multi-carousel": "^2.5.5",
     "react-pro-sidebar": "^0.4.4",
+    "react-router": "^3.2.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-youtube": "^7.12.0",
     "styled-components": "^5.2.0"
   },
   "scripts": {
