--- a/server/package.json
+++ b/server/package.json
@@ -20,9 +20,12 @@
   },
   "homepage": "https://github.com/michaelbyalsky/spotify#readme",
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
+    "bcryptjs": "^2.4.3",
     "circular-json": "^0.5.9",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1"
   },
   "devDependencies": {
