--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^4.5.2",
     "firebase": "^7.20.0",
     "interweave": "^12.5.0",
+    "js-cookie": "^2.2.1",
     "query-string": "^6.13.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
