--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
+    "downshift": "^6.0.6",
     "firebase": "^7.20.0",
     "interweave": "^12.5.0",
     "js-cookie": "^2.2.1",
