--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/michaelbyalsky/spotify#readme",
   "dependencies": {
+    "@elastic/elasticsearch": "^7.9.1",
     "@hapi/joi": "^17.1.1",
     "bcryptjs": "^2.4.3",
     "circular-json": "^0.5.9",
